--- a/index.html
+++ b/index.html
@@ -24,72 +24,14 @@
                     <div class="player__details">
                         <h1 class="player__name">Jab Player</h1>
                         <div class="player__count-wrapper">
-                            <span class="player__count">7</span>Songs
+                            <span class="player__count">7</span> songs
                         </div>
                         <button class="button is-green player__trigger">Play</button>
                     </div>
                 </div>
                 <div class="player__body">
                     <ul class="playlist">
-                        <!-- song -->
-                        <li class="playlist__song">
-                            <div class="play-pause">
-                                <i class="fa fa-play pp-icon"></i>
-                            </div>
-                            <div class="playlist__song-details">
-                                <span class="playlist__song-name">What You Know</span>
-                                <br>
-                                <span class="playlist__song-artist">Two Door Cinema Club</span>
-                            </div>
-                            <div class="playlist__song-duration">
-                                4:13
-                            </div>
-                        </li>
-
-                        <!-- song -->
-                        <li class="playlist__song">
-                            <div class="play-pause">
-                                <i class="fa fa-play pp-icon"></i>
-                            </div>
-                            <div class="playlist__song-details">
-                                <span class="playlist__song-name">What You Know</span>
-                                <br>
-                                <span class="playlist__song-artist">Two Door Cinema Club</span>
-                            </div>
-                            <div class="playlist__song-duration">
-                                4:13
-                            </div>
-                        </li>
-
-                        <!-- song -->
-                        <li class="playlist__song">
-                            <div class="play-pause">
-                                <i class="fa fa-play pp-icon"></i>
-                            </div>
-                            <div class="playlist__song-details">
-                                <span class="playlist__song-name">What You Know</span>
-                                <br>
-                                <span class="playlist__song-artist">Two Door Cinema Club</span>
-                            </div>
-                            <div class="playlist__song-duration">
-                                4:13
-                            </div>
-                        </li>
-
-                        <!-- song -->
-                        <li class="playlist__song">
-                            <div class="play-pause">
-                                <i class="fa fa-play pp-icon"></i>
-                            </div>
-                            <div class="playlist__song-details">
-                                <span class="playlist__song-name">What You Know</span>
-                                <br>
-                                <span class="playlist__song-artist">Two Door Cinema Club</span>
-                            </div>
-                            <div class="playlist__song-duration">
-                                4:13
-                            </div>
-                        </li>
+                        
                     </ul>
                 </div>
             </div>
